--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <button id="prepararQuizz">Preparar Quizz</button>
     <button id="iniciarQuizz">Iniciar Quizz</button>
     <button id="responderQuizz">Responder Quizz</button>
+    <button id="entrarQuizz">Entrar Quizz</button>
+    <button id="encerrarQuizz">Encerrar Quizz</button>
+    <button id="mostrarResultado">Mostrar Resultado</button>
 
     <script type="text/javascript">
       let socket;
@@ -47,7 +50,7 @@
           socket.emit("iniciateQuizz", {
             userId: 2,
             userLevel: 2,
-            quizzId: 2,
+            quizzId: 1,
           });
         }
       });
@@ -57,7 +60,40 @@
           if (socket) {
             socket.emit("answerQuizz", {
               studentId: 1,
-              choiceId: 5,
+              choiceId: 3,
+              quizzId: 1
+            });
+          }
+        });
+        document
+        .querySelector("#entrarQuizz")
+        .addEventListener("click", () => {
+          if (socket) {
+            socket.emit("enterQuizz", {
+              quizzId: 14,
+              userId: 3,
+              classId: 1
+            });
+          }
+        });
+        document
+        .querySelector("#encerrarQuizz")
+        .addEventListener("click", () => {
+          if (socket) {
+            socket.emit("endQuizz", {
+              userId: 2,
+              userLevel: 2,
+              quizzId: 1,
+            });
+          }
+        });
+        document
+        .querySelector("#mostrarResultado")
+        .addEventListener("click", () => {
+          if (socket) {
+            socket.emit("showResult", {
+              userId: 3,
+              quizzId: 1,
             });
           }
         });
